--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
             <li><a href="none"><img src="https://www.baskinrobbins.co.kr/assets/images/common/icon_youtube.png"></a></li>
           </ul>
         </nav>
-        <nav id="etc"></nav>
+        <nav id="etc">
+          <ul>
+            <li><a href="none">고객센터</a></li>
+            <li><a href="none">CONTACT US</a></li>
+            <li id="search"><a href="none"></a></li>
+          </ul>
+        </nav>
       </div>
     </div><!--.head-main-->
     <div class="heading head-menu" id="headMenu">
